--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 	<head>
-		<title>Anthony Garand</title>
+		<title>VIJABS (Moslem Collection) - "HAPPY ACTIVITY, KEEP SYAR'I"</title>
 		<meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
 		<script type="text/javascript" src="//use.typekit.net/uqy4hsa.js"></script>
 		<script type="text/javascript" src="/assets/script/instagram.js"></script>
@@ -10,12 +10,12 @@
 	</head>
 	<body>
 		<div class="profile">
-			<img src="/assets/images/profile.jpg" alt="Anthony Garand">
+			<img src="/assets/images/profile.jpg" alt="Vijabs">
 		</div>
 		<article>
-			<h2 class="greeting">Hey,</h2>
-			<h1 class="name">I'm Anthony Garand</h1>
-			<h3 class="message">I’m a Jesus lover, <a href="http://github.com/garand" target="_blank">front-end developer</a>, and <a href="http://instagram.com/garand">photography enthusiast</a>. Send me an <a href="mailto:garand@garand.me">email</a>, or read my <a href="http://twitter.com/garand">tweets</a>.</h3>
+			<h2 class="greeting">VIJABS (Moslem Collection)</h2>
+			<h1 class="name">"HAPPY ACTIVITY, KEEP SYAR'I"</h1>
+			<h3 class="message">Premium Quality For order and more info: ⏰ Senin s/d Sabtu (08.00-20.00) 📲 WA 085211676698 📲 LINE via link <a href="http://goo.gl/wyVA7o" alt="vijabs">@vijabs</a>.</h3>
 			<div id="instagram"></div>
 		</article>
 	</body>
