--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 			<img src="/assets/images/profile.jpg" alt="Vijabs">
 		</div>
 		<article>
-			<h2 class="greeting">VIJABS (Moslem Collection)</h2>
-			<h1 class="name">"HAPPY ACTIVITY, KEEP SYAR'I"</h1>
-			<h3 class="message">Premium Quality For order and more info: ⏰ Senin s/d Sabtu (08.00-20.00) 📲 WA 085211676698 📲 LINE via link <a href="http://goo.gl/wyVA7o" alt="vijabs">@vijabs</a>.</h3>
+			<h2 class="greeting">"HAPPY ACTIVITY, KEEP SYAR'I"</h2>
+			<h1 class="name">VIJABS (Moslem Collection)</h1>
+			<h3 class="message">Premium Quality For order and more info:<br>⏰ Senin s/d Sabtu (08.00-20.00)<br>📲 WA 085211676698<br>📲 LINE via link <a href="http://goo.gl/wyVA7o" alt="vijabs">@vijabs</a>.</h3>
 			<div id="instagram"></div>
 		</article>
 	</body>
