--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 		</div>
 		<article>
 			<h2 class="greeting">"HAPPY ACTIVITY, KEEP SYAR'I"</h2>
-			<h1 class="name">VIJABS (Moslem Collection)</h1>
+			<h1 class="name">VIJABS</h1>
+			<h2 class="greeting"><em>Moslem Collection</em></h2>
 			<h3 class="message">Premium Quality For order and more info:<br>⏰ Senin s/d Sabtu (08.00-20.00)<br>📲 WA 085211676698<br>📲 LINE via link <a href="http://goo.gl/wyVA7o" alt="vijabs">@vijabs</a>.</h3>
 			<div id="instagram"></div>
 		</article>
