--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>VIJABS (Moslem Collection) - "HAPPY ACTIVITY, KEEP SYAR'I"</title>
 		<meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
-		<script type="text/javascript" src="//use.typekit.net/uqy4hsa.js"></script>
+		<link href='https://fonts.googleapis.com/css?family=Product+Sans:400,400i,700,700i' rel='stylesheet' type='text/css'>
 		<script type="text/javascript" src="/assets/script/instagram.js"></script>
 		<script type="text/javascript" src="/assets/script/main.js"></script>
 		<link rel="stylesheet" href="/assets/style/main.css">
