--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 			get: 'user',
 			userId: 1822919008,
 			clientId: '8c76584baded48849d540602dddc19e4',
-			template: '<a class="animation" href="{{link}}"><img src="{{image}}" /></a>'
+			accessToken: '1822919008.8c76584.723126dc85974c4eb4196ed945be51bc',
+			resolution: 'standard_resolution'
 		    });
 		    feed.run();
 		</script>
