--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 			userId: 4152793054,
 			//clientId: '8c76584baded48849d540602dddc19e4',
 			accessToken: '4054629837.0efbe26.bc142395f83a452f8ae03fe28345789f'
-			//resolution: 'standard_resolution'
+			resolution: 'standard_resolution'
 		    });
 		    feed.run();
 		</script>
