--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 			get: 'user',
 			userId: 4152793054,
 			//clientId: '8c76584baded48849d540602dddc19e4',
-			accessToken: '4054629837.0efbe26.bc142395f83a452f8ae03fe28345789f',
-			resolution: 'low_resolution'
+			accessToken: '4054629837.0efbe26.bc142395f83a452f8ae03fe28345789f'
+// 			resolution: 'standard_resolution'
 		    });
 		    feed.run();
 		</script>
