--- a/index.html
+++ b/index.html
@@ -5,15 +5,7 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
 		<link href='https://fonts.googleapis.com/css?family=Product+Sans:400,400i,700,700i' rel='stylesheet' type='text/css'>
 		<script type="text/javascript" src="/assets/script/instagram.js"></script>
-		<script type="text/javascript">
-		var feed = new Instafeed({
-			get: 'user',
-			userId: 4152793054,
-			//clientId: '8c76584baded48849d540602dddc19e4',
-			accessToken: '4054629837.0efbe26.bc142395f83a452f8ae03fe28345789f'
-		    });
-		    feed.run();
-		</script>
+		<script type="text/javascript" src="/assets/script/main.js"></script>
 		<link rel="stylesheet" href="/assets/style/main.css">
 	</head>
 	<body>
