--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<h1 class="name">VIJABS</h1>
 			<h2 class="greeting"><em>Moslem Collection</em></h2>
 			<h3 class="message">Premium Quality For order and more info:<br>⏰ Senin s/d Sabtu (08.00-20.00)<br>📲 WA 085211676698<br>📲 LINE via link <a href="http://goo.gl/wyVA7o" alt="vijabs">@vijabs</a>.</h3>
-			<div id="instafeed"></div>
+			<div id="instagram"></div>
 		</article>
 	</body>
 </html>
